配置: 调整nacos及框架配置

--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,21 @@
     </properties>
 
     <dependencies>
+        <!-- 框架: 异常 -->
+        <dependency>
+            <groupId>net.hwyz.iov.cloud.framework</groupId>
+            <artifactId>framework-exception-starter</artifactId>
+        </dependency>
         <!-- 框架: Kafka -->
         <dependency>
             <groupId>net.hwyz.iov.cloud.framework</groupId>
             <artifactId>framework-kafka-starter</artifactId>
             <version>${framework-kafka.version}</version>
+        </dependency>
+        <!-- 框架: MySQL -->
+        <dependency>
+            <groupId>net.hwyz.iov.cloud.framework</groupId>
+            <artifactId>framework-mysql-starter</artifactId>
         </dependency>
         <!-- MQTT -->
         <dependency>
